--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -92,7 +92,7 @@
 
 <!-- Feature 1 -->
 <article id="first" class="container box style1 right party-element">
-  <a href="#" class="image fit"><img src="../../assets/images/pic02.jpg" alt="" /></a>
+  <a href="#" class="image fit"><img src="../../assets/images/25hours.jpg" alt="" /></a>
   <div class="inner">
     <header>
       <h2>10.05.2018<br />
@@ -104,7 +104,7 @@
 </article>
 
   <article class="container box style1 left party-element">
-    <a href="#" class="image fit"><img src="../../assets/images/pic01.jpg" alt="" /></a>
+    <a href="#" class="image fit"><img src="../../assets/images/silvester.jpg" alt="" /></a>
     <div class="inner">
       <header>
         <h2>31.12.17<br />
@@ -117,7 +117,7 @@
 
 
   <article id="first" class="container box style1 right party-element">
-    <a href="#" class="image fit"><img src="../../assets/images/pic01.jpg" alt="" /></a>
+    <a href="#" class="image fit"><img src="../../assets/images/utostaffel.jpg" alt="" /></a>
     <div class="inner">
       <header>
         <h2>19.08.2017<br />
@@ -130,7 +130,7 @@
 
 <!-- Feature 2 -->
   <article class="container box style1 left party-element">
-    <a href="#" class="image fit"><img src="../../assets/images/pic02.jpg" alt="" /></a>
+    <a href="#" class="image fit"><img src="../../assets/images/schlieren.jpg" alt="" /></a>
     <div class="inner">
       <header>
         <h2>31.12.2016<br />
@@ -158,8 +158,6 @@
 			<article class="container container-gallerie">
 				<header>
 					<h3>Gallerie</h3>
-					<p>Justo phasellus et aenean dignissim<br />
-					placerat cubilia purus lectus.</p>
 				</header>
 				<div class="inner gallery">
 					<div class="row 0%">
@@ -277,7 +275,7 @@
                       <header>
                         <h2>Tom Hängs</h2>
                       </header>
-                      <p>one of the three founding fathers of the Klang Heimlich crew. He enriches the
+                      <p>One of the three founding fathers of the Klang Heimlich crew. He enriches the
                            Family with skills in graphics, logistics and technics. He enjoys redefining the musical boundaries of
                            Klang Heimlich events with “out of the box” bookings. His wide range of musical taste is reflected in
                            his sets, the longer the better: from melodic electronica, Tom glides effortlessly into the deeper shades
@@ -288,27 +286,110 @@
                     </div>
                 </article>
 
+		    </section>
 
 
+      <section>
 
-		 </section>
+        <br />
+        <br />
 
+        <div class="guests-wrapper">
+          <div class="guests-container">
+          <div class="divTable">
+            <div class="divTableBody">
+              <div class="divTableRow">
+                <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/andreasramos.jpg" /></div>
+                <div class="divTableCell"><a href="https://www.facebook.com/andreasramosmusic/" target="_blank"> Andreas Ramos </a> </div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/areage.jpg" /></div>
+                <div class="divTableCell"><a href="https://www.facebook.com/are.age.live/" target="_blank"> Are:Age </a> </div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/bernstein.jpg" /></div>
+                <div class="divTableCell"><a href="https://www.facebook.com/bernsteinmusik/" target="_blank"> Bernstein </a> </div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/burtcobain.jpg" /></div>
+                <div class="divTableCell"><a href="https://www.facebook.com/Burt-Cobain-1622359221367259/" target="_blank"> Burt Cobain</a> </div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/ismailclive.jpg" /></div>
+                <div class="divTableCell"><a href="https://www.facebook.com/Ismailundclive/" target="_blank"> Ismail & Clive </a> </div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/jb.jpg" /></div>
+                <div class="divTableCell"><a href="https://www.facebook.com/JuenBach" target="_blank"> Juen & Bach </a> </div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/kalabrese.jpg" /></div>
+                <div class="divTableCell"><a href="https://www.facebook.com/kalabrese" target="_blank"> Kalabrese </a> </div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/lucagerosa.jpg" /></div>
+                <div class="divTableCell"><a href="https://www.facebook.com/che.rossa" target="_blank"> Luca Gerosa </a> </div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/matija.jpg" /></div>
+                <div class="divTableCell"><a href="https://www.facebook.com/djmatija/" target="_blank"> Matija </a> </div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/milo.jpg" /></div>
+                <div class="divTableCell"><a href="https://www.facebook.com/milo.hafliger" target="_blank"> Milo Häfliger </a> </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
-            <section>
-				<header>
+          <div class="guests-container">
+          <div class="divTable">
+            <div class="divTableBody">
+              <div class="divTableRow">
+                <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/natch.jpg" /></div>
+                <div class="divTableCell"><a href="https://www.facebook.com/natchporres" target="_blank"> Natch </a> </div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/nicifaerber.jpg" /></div>
+                <div class="divTableCell"><a href="https://www.facebook.com/nici.faerber" target="_blank"> Nici Faerber </a> </div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/nicosun.jpg" /></div>
+                <div class="divTableCell"><a href="https://www.facebook.com/nicsonne/" target="_blank"> Nico Sun </a> </div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/pasci.jpg" /></div>
+                <div class="divTableCell"><a href="https://www.facebook.com/dj.pasci/" target="_blank"> Pasci </a> </div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/rubencoslada.jpg" /></div>
+                <div class="divTableCell"><a href="https://www.facebook.com/rubencosladamusic/" target="_blank"> Ruben Coslada </a> </div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/rumlaut.jpg" /></div>
+                <div class="divTableCell"><a href="https://www.facebook.com/rumlaut/" target="_blank"> Rumlaut </a> </div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/smalltown.jpg" /></div>
+                <div class="divTableCell"><a href="https://www.facebook.com/SmalltownCollective" target="_blank"> Smalltown <br /> Collective </a> </div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/temosayin.jpg" /></div>
+                <div class="divTableCell"><a href="https://www.facebook.com/temo.sayin" target="_blank"> Temo Sayin </a> </div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/timoteo.jpg" /></div>
+                <div class="divTableCell"><a href="https://www.facebook.com/schickerio" target="_blank"> Timoteo </a> </div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/working.jpg" /></div>
+                <div class="divTableCell"><a href="https://www.facebook.com/workinprogressZH/" target="_blank"> Workinprogress </a> </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
-				</header>
-
-
-
-
-
-
-
-        <!-- DivTable.com -->
-
-
-
+        </div>
 
 			</section>
 
@@ -511,6 +592,13 @@
 
       <br />
       <a href="mailto:klang.heimlich.zh@gmail.com" target="_top" class="contactUs" >oder schreib uns eine E-Mail</a>
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
     </div>
   </div>
 
