--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -104,7 +104,7 @@
 </article>
 
   <article class="container box style1 left party-element">
-    <a href="#" class="image fit"><img src="../../assets/images/silvester.jpg" alt="" /></a>
+    <a href="#" class="image fit"><img src="../../assets/images/silverster.jpg" alt="" /></a>
     <div class="inner">
       <header>
         <h2>31.12.17<br />
@@ -210,7 +210,7 @@
   <article class="container box style3">
 
       <header>
-          <h3>Artists</h3>
+          <h3>Team</h3>
       </header>
 		  <section>
 
@@ -219,7 +219,7 @@
                 <a href="#" class="image fit"><img src="../../assets/images/owners/daniposada.jpg" alt="" /></a>
                 <div class="inner">
                   <header>
-                    <h2>Dani Posada</h2>
+                    <h2><a href="https://www.facebook.com/DaniPosadaMusic/" target="_blank"> <b> Dani Posada</b> </a></h2>
                   </header>
                   <p> As one of the founders of Klang Heimlich, Dani Posada is taking care of the bookings,
                        logistics, decoration and artwork. Moreover, he is one of the three residents at Klang Heimlich and co-founder
@@ -228,7 +228,7 @@
                         as well as current productions are defined by groovy sounds that can go from downtempo over
                         deep- and tech-house to techno, telling a story that is slowly building up and gaining in
                         intensity until it reaches the climax.
-                        <br/>(Link: <a href="https://www.facebook.com/DaniPosadaMusic/" target="_blank"> <b> Dani Posada</b> </a>)
+
                 </p>
                 </div>
               </article>
@@ -237,7 +237,7 @@
                     <a href="#" class="image fit"><img src="../../assets/images/owners/marcbach.jpg" alt="" /></a>
                     <div class="inner">
                       <header>
-                        <h2>Marc Bach</h2>
+                        <h2><a href="https://www.facebook.com/JuenBach/" target="_blank"><b> Marc Bach</b> </a></h2>
                       </header>
                       <p>a.k.a. Papa Bach began his DJ career back in 1994. Since then he became an institution
                           in the Swiss nightlife, not only as a DJ and promoter of different labels, but also as producer and owner of
@@ -246,7 +246,7 @@
                            finance, staff management and logistics. He is also one of the Klang Heimlich residents, playing together
                            with his partner Patrick Juen, under the name Juen & Bach. This duo is well known within and beyond
                            the Swiss borders for their great music.
-                          <br/>(Link: <a href="https://www.facebook.com/JuenBach/" target="_blank"><b> Marc Bach</b> </a>)</p>
+
                     </div>
                 </article>
 
@@ -255,7 +255,7 @@
                   <a href="#" class="image fit"><img src="../../assets/images/owners/phil.jpg" alt="" /></a>
                   <div class="inner">
                     <header>
-                      <h2>Phil Lutz</h2>
+                      <h2><a href="https://www.facebook.com/loco.phil1" target="_blank"><b> Phil Lutz</b> </a></h2>
                     </header>
                     <p>He is the only Family member that is not behind the dj-booth during the events
                         but his passion for music has no boundaries and is always reflected in the Klang Heimlich lineup.
@@ -263,7 +263,7 @@
                         different cities. His experience is a very valuable asset for each single event that we create and has
                         enabled us to create new worlds from scratch. Phil has THE eye for unique locations and takes the
                         lead to transform them in successful events.
-                        <br />(Link: <a href="https://www.facebook.com/loco.phil1" target="_blank"><b> Phil Lutz</b> </a>)
+
                     </p>
                   </div>
                 </article>
@@ -273,7 +273,7 @@
                     <a href="#" class="image fit"><img src="../../assets/images/owners/tom.jpg" alt="" /></a>
                     <div class="inner">
                       <header>
-                        <h2>Tom Hängs</h2>
+                        <h2><a href="https://www.facebook.com/tomhaengsZH/" target="_blank"><b> Tom Hängs</b> </a></h2>
                       </header>
                       <p>One of the three founding fathers of the Klang Heimlich crew. He enriches the
                            Family with skills in graphics, logistics and technics. He enjoys redefining the musical boundaries of
@@ -281,7 +281,7 @@
                            his sets, the longer the better: from melodic electronica, Tom glides effortlessly into the deeper shades
                            of house and organic layers of techno all the while adding a twist of dub but never losing grip of a
                            solid groove. Always good for a surprise, his playful persona endears the crowds minds, bodies and souls
-                           <br/>(Link: <a href="https://www.facebook.com/tomhaengsZH/" target="_blank"><b> Tom Hängs</b> </a>)
+
                        </p>
                     </div>
                 </article>
@@ -293,6 +293,11 @@
 
         <br />
         <br />
+
+
+        <header>
+            <h3>Hall of fame</h3>
+        </header>
 
         <div class="guests-wrapper">
           <div class="guests-container">
